# fitness-tracker

./: .gitignore  AGENTS.md  README.md  api.py  config.py  db.py  events.py  fn_helper.py  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
cli/: __init__.py  main.py
tests/: conftest.py  test_api.py  test_db_events.py
