[project]
name = "fitness-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.1",
    "click>=8.1.7",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.6",
]

[project.scripts]
fitness-tracker = "cli:main"

[tool.uv]
package = true
